# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  ruff.toml
.github/workflows/: build.yml  ci.yml  lint.yaml
page_analyzer/: app.py  checker.py  db.py  validators.py
page_analyzer/templates/: index.html  url.html  urls.html  urls_index.html  urls_show.html
