[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
dependencies = [
    "flask==3.0.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "ruff==0.1.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]