[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask==3.0.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "psycopg2-binary==2.9.9",
    "validators==0.22.0",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
]

# Убираем dev-зависимости из основного блока, переносим в optional
[project.optional-dependencies]
dev = [
    "ruff==0.1.9",
    "pytest==7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

# Настройки ruff выносим в отдельную секцию
[tool.ruff]
line-length = 127
select = ["E", "F", "I", "C90"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"